--- a/.drone.yml
+++ b/.drone.yml
@@ -43,6 +43,7 @@ matrix:
     - { TARGET: test, CONSTEL: ui.grid }
     - { TARGET: test, CONSTEL: ui.scheduler }
     - { TARGET: test, CONSTEL: viz }
+    - { TARGET: test, CONSTEL: perf }
     - { TARGET: test, BROWSER: firefox, CONSTEL: misc }
     - { TARGET: test, BROWSER: firefox, CONSTEL: ui }
     - { TARGET: test, BROWSER: firefox, CONSTEL: ui.editors }
